2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Better support for returning long long, now works for gbz80, too.

2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Better assignment for large variables.
	* src/z80/peep.c:
	  Fix code size calculation bug.

2012-03-28 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure, sdccconf_in.h,
	  sim/ucsim/configure.in, sim/ucsim/configure,
	  sim/ucsim/ddconfig_in.h:
	  use AC_C_BIGENDIAN instead of SDCC_BUILD_BIGENDIAN
	* support/cpp/config.in: regenerated
	* custom_in.h, sim/ucsim/custom_in.h: removed

2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/stdint.h:
	  Use long long for intmax_t where available.

2012-03-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-981001-1.c: Revert my
	  previous edit since it was not needed

2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  support/regression/tests/longlong.c:
	  Fixed returning long long, and reenabled test.

2012-03-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-981001-1.c: Only use
	  __reentrant for SDCC and not for test-host
	* support/regression/tests/gcc-torture-execute-930106-1.c: Reenabled

2012-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-981001-1.c:
	  Fixed #3511512 / #3511513.

2012-03-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCsymt.c,
	  src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-960801-1.c,
	  support/regression/tests/longlong.c:
	  Support for returning long long and unsigned long long in z80, z180 and r2k port.

2012-03-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed stack unbalance bug.
