@@ -1,3 +1,8 @@
+2012-03-28 Borut Razem <borut.razem AT gmail.com>
+
+	* src/SDCCval.c, src/SDCCval.h, src/SDCCicode.c:
+	  double2ul converted from macro to a function
+
 2012-03-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
